Rename `Widget` class into `ViewModel`

--- a/src/main/index.css
+++ b/src/main/index.css
@@ -1,5 +1,5 @@
 @import url('../views/index.css');
 @import url('../pages/index.css');
-@import url('./widget.css');
 @import url('../extensions/inspector.css');
+@import url('./view-model.css');
 @import url('./app.css');
