Rename inspector's style files

--- a/src/extensions/inspector.css
+++ b/src/extensions/inspector.css
@@ -1,5 +1,5 @@
 @import './inspector/overlay.css';
 @import './inspector/popup.css';
-@import './inspector/sidebar.css';
-@import './inspector/toolbar.css';
-@import './inspector/content.css';
+@import './inspector/popup-sidebar.css';
+@import './inspector/popup-toolbar.css';
+@import './inspector/popup-content.css';
