Fix tree layout when leaf's content is a block view

--- a/src/views/tree/tree-leaf.css
+++ b/src/views/tree/tree-leaf.css
@@ -82,6 +82,7 @@
 }
 .view-tree-leaf-content::before {
     content: '\200B';
+    float: left;
 }
 .view-tree-leaf-content:empty::before {
     content: '<empty>';
