--- a/src/views/index.css
+++ b/src/views/index.css
@@ -21,6 +21,7 @@
 @import url('./layout/lists.css');
 
 @import url('./text/alerts.css');
+@import url('./text/app-header.css');
 @import url('./text/badges.css');
 @import url('./text/headers.css');
 @import url('./text/link.css');
