--- a/src/views/text/source.css
+++ b/src/views/text/source.css
@@ -14,6 +14,9 @@
     white-space: normal;
     tab-size: 4;
 }
+.view-source + .view-source {
+    margin-top: 1px;
+}
 
 .view-source__prelude {
     grid-area: prelude;
