--- a/src/views/controls/menu-item.css
+++ b/src/views/controls/menu-item.css
@@ -6,8 +6,8 @@
     cursor: pointer;
 }
 .view-menu-item:empty::before {
-    content: '|';
-    visibility: hidden;
+    content: '\200B';
+    float: left;
 }
 .view-menu-item:hover,
 .view-menu-item.discovery-view-popup-active {
