--- a/src/views/signature/style/action-button.css
+++ b/src/views/signature/style/action-button.css
@@ -1,12 +1,15 @@
 .view-signature [data-action] {
-    vertical-align: top;
-    margin-left: 2px;
-    padding: 2px 5px;
-    font-size: 9px;
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: calc(2em / 9); /* 2px */
+    padding: min(calc(1em / 3), 5px) min(calc(3px + 1em / 3), 8px);
+    margin-top: max(1px - calc(1em / 3), -4px);
     color: rgba(170, 170, 170, 0.4);
-    background: rgba(195, 195, 195, 0.05);
-    border: 1px solid rgba(141, 141, 141, 0.15);
+    background-color: rgba(195, 195, 195, 0.05);
+    border: .85px solid rgba(141, 141, 141, 0.15);
     border-radius: 3px;
+    line-height: 1;
+    font-size: .75em; /* 9px */
     cursor: pointer;
 }
 .discovery-root-darkmode .view-signature [data-action] {
